--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfolio-app",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
-  "homepage": "https://dbarochiya.github.io/me",
+  "homepage": "https://guigabecv.herokuapp.com/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.3",
